9- Deployment-Strategy/Rolling Update/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  selector:
    app: app # This should match the labels in your Deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
